# pe_ai

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/fund-cfo-style/: SKILL.md
docker/: entrypoint.sh
phase1/: explore.py  generate.py  waterfall.py
phase2/: ask.py
phase3/: client_demo.py  server.py
phase4/: ask.py  ingest.py  search.py
phase4/lpas/: fund_i_lpa.txt  fund_ii_lpa.txt  fund_iii_lpa.txt
phase5/: agent.py
phase6/: app.py
phase7/: skill_demo.py
