[project]
name = "pe-ai"
version = "0.1.0"
description = "Expert-level private fund AI assistant — analytics, retrieval, and scenario modeling for fund CFOs"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.107.1",
    "chromadb>=1.5.9",
    "duckdb>=1.0.0",
    "fastapi>=0.136.3",
    "fastmcp>=3.4.2",
    "python-dotenv>=1.0.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[tool.uv]
package = false
